// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`csharp snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "Scope",
      "docs": {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "Construct",
            "fqn": "Amazon.CDK.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    {
      "default": undefined,
      "displayName": "Id",
      "docs": {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": {
        "formattingPattern": "string",
      },
    },
    {
      "default": undefined,
      "displayName": "Props",
      "docs": {
        "summary": "- resource properties.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);",
}
`;

exports[`csharp snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope">Scope</a></code> | <code>Amazon.CDK.Construct</code> | - scope in which this resource is defined. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id">Id</a></code> | <code>string</code> | - scoped id of the resource. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props">Props</a></code> | <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`Scope\`<sup>Required</sup> <a name="Scope" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope"></a>

- *Type:* Amazon.CDK.Construct

scope in which this resource is defined.

---

# \`Id\`<sup>Required</sup> <a name="Id" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id"></a>

- *Type:* string

scoped id of the resource.

---

# \`Props\`<sup>Optional</sup> <a name="Props" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props"></a>

- *Type:* <a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;

exports[`go snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "scope",
      "docs": {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "Construct",
            "fqn": "github.com/aws/aws-cdk-go/awscdk/awscdkcore.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    {
      "default": undefined,
      "displayName": "id",
      "docs": {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": {
        "formattingPattern": "*string",
      },
    },
    {
      "default": undefined,
      "displayName": "props",
      "docs": {
        "summary": "- resource properties.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import "github.com/aws/aws-cdk-go/awscdkawsecr"

awscdkawsecr.NewCfnPublicRepository(scope Construct, id *string, props CfnPublicRepositoryProps) CfnPublicRepository",
}
`;

exports[`go snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`go
import "github.com/aws/aws-cdk-go/awscdkawsecr"

awscdkawsecr.NewCfnPublicRepository(scope Construct, id *string, props CfnPublicRepositoryProps) CfnPublicRepository
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope">scope</a></code> | <code>github.com/aws/aws-cdk-go/awscdk/awscdkcore.Construct</code> | - scope in which this resource is defined. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id">id</a></code> | <code>*string</code> | - scoped id of the resource. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props">props</a></code> | <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`scope\`<sup>Required</sup> <a name="scope" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope"></a>

- *Type:* github.com/aws/aws-cdk-go/awscdk/awscdkcore.Construct

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a name="id" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id"></a>

- *Type:* *string

scoped id of the resource.

---

# \`props\`<sup>Optional</sup> <a name="props" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props"></a>

- *Type:* <a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;

exports[`java snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "scope",
      "docs": {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "Construct",
            "fqn": "software.amazon.awscdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    {
      "default": undefined,
      "displayName": "id",
      "docs": {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": {
        "formattingPattern": "java.lang.String",
      },
    },
    {
      "default": undefined,
      "displayName": "repositoryCatalogData",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "optional": true,
      "type": {
        "formattingPattern": "java.lang.Object",
      },
    },
    {
      "default": undefined,
      "displayName": "repositoryName",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "optional": true,
      "type": {
        "formattingPattern": "java.lang.String",
      },
    },
    {
      "default": undefined,
      "displayName": "repositoryPolicyText",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "optional": true,
      "type": {
        "formattingPattern": "java.lang.Object",
      },
    },
    {
      "default": undefined,
      "displayName": "tags",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags",
      "optional": true,
      "type": {
        "formattingPattern": "java.util.List<%>",
        "types": [
          {
            "formattingPattern": "%",
            "types": [
              {
                "displayName": "CfnTag",
                "fqn": "software.amazon.awscdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();",
}
`;

exports[`java snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope">scope</a></code> | <code>software.amazon.awscdk.core.Construct</code> | - scope in which this resource is defined. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id">id</a></code> | <code>java.lang.String</code> | - scoped id of the resource. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData">repositoryCatalogData</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName">repositoryName</a></code> | <code>java.lang.String</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText">repositoryPolicyText</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags">tags</a></code> | <code>java.util.List<software.amazon.awscdk.core.CfnTag></code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

# \`scope\`<sup>Required</sup> <a name="scope" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope"></a>

- *Type:* software.amazon.awscdk.core.Construct

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a name="id" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id"></a>

- *Type:* java.lang.String

scoped id of the resource.

---

# \`repositoryCatalogData\`<sup>Optional</sup> <a name="repositoryCatalogData" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData"></a>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

# \`repositoryName\`<sup>Optional</sup> <a name="repositoryName" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName"></a>

- *Type:* java.lang.String

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

# \`repositoryPolicyText\`<sup>Optional</sup> <a name="repositoryPolicyText" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText"></a>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

# \`tags\`<sup>Optional</sup> <a name="tags" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags"></a>

- *Type:* java.util.List<software.amazon.awscdk.core.CfnTag>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`python snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "scope",
      "docs": {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "Construct",
            "fqn": "aws_cdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    {
      "default": undefined,
      "displayName": "id",
      "docs": {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": {
        "formattingPattern": "str",
      },
    },
    {
      "default": undefined,
      "displayName": "repository_catalog_data",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_catalog_data",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "optional": true,
      "type": {
        "formattingPattern": "typing.Any",
      },
    },
    {
      "default": undefined,
      "displayName": "repository_name",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_name",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "optional": true,
      "type": {
        "formattingPattern": "str",
      },
    },
    {
      "default": undefined,
      "displayName": "repository_policy_text",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_policy_text",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "optional": true,
      "type": {
        "formattingPattern": "typing.Any",
      },
    },
    {
      "default": undefined,
      "displayName": "tags",
      "docs": {
        "links": [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags",
      "optional": true,
      "type": {
        "formattingPattern": "typing.List[%]",
        "types": [
          {
            "formattingPattern": "%",
            "types": [
              {
                "displayName": "CfnTag",
                "fqn": "aws_cdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)",
}
`;

exports[`python snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope">scope</a></code> | <code>aws_cdk.core.Construct</code> | - scope in which this resource is defined. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id">id</a></code> | <code>str</code> | - scoped id of the resource. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData">repository_catalog_data</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName">repository_name</a></code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText">repository_policy_text</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags">tags</a></code> | <code>typing.List[aws_cdk.core.CfnTag]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

# \`scope\`<sup>Required</sup> <a name="scope" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope"></a>

- *Type:* aws_cdk.core.Construct

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a name="id" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id"></a>

- *Type:* str

scoped id of the resource.

---

# \`repository_catalog_data\`<sup>Optional</sup> <a name="repository_catalog_data" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData"></a>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

# \`repository_name\`<sup>Optional</sup> <a name="repository_name" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName"></a>

- *Type:* str

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

# \`repository_policy_text\`<sup>Optional</sup> <a name="repository_policy_text" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText"></a>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

# \`tags\`<sup>Optional</sup> <a name="tags" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags"></a>

- *Type:* typing.List[aws_cdk.core.CfnTag]

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`typescript snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "scope",
      "docs": {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "Construct",
            "fqn": "@aws-cdk/core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    {
      "default": undefined,
      "displayName": "id",
      "docs": {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": {
        "formattingPattern": "string",
      },
    },
    {
      "default": undefined,
      "displayName": "props",
      "docs": {
        "summary": "- resource properties.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)",
}
`;

exports[`typescript snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`typescript
import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope">scope</a></code> | <code>@aws-cdk/core.Construct</code> | - scope in which this resource is defined. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id">id</a></code> | <code>string</code> | - scoped id of the resource. |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props">props</a></code> | <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`scope\`<sup>Required</sup> <a name="scope" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope"></a>

- *Type:* @aws-cdk/core.Construct

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a name="id" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id"></a>

- *Type:* string

scoped id of the resource.

---

# \`props\`<sup>Optional</sup> <a name="props" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props"></a>

- *Type:* <a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;

exports[`wing snapshot 1`] = `
{
  "displayName": "Initializer",
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": [
    {
      "default": undefined,
      "displayName": "props",
      "docs": {
        "summary": "- resource properties.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "bring { CfnPublicRepository } from "@aws-cdk/aws-ecr";

new CfnPublicRepository(props?: CfnPublicRepositoryProps);",
}
`;

exports[`wing snapshot 2`] = `
" Initializers <a name="Initializers" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer"></a>

\`\`\`wing
bring { CfnPublicRepository } from "@aws-cdk/aws-ecr";

new CfnPublicRepository(props?: CfnPublicRepositoryProps);
\`\`\`

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props">props</a></code> | <code><a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`props\`<sup>Optional</sup> <a name="props" id="@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props"></a>

- *Type:* <a href="#@aws-cdk/aws-ecr.CfnPublicRepositoryProps">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;
